--- a/index.html
+++ b/index.html
@@ -10,46 +10,46 @@
 <body>
     <h1 id="title">Paleta de Cores</h1>
     <div id="color-palette">
-        <div class="color" style="background-color: black;"></div>
-        <div class="color" style="background-color: yellow;"></div>
-        <div class="color" style="background-color: red"></div>
-        <div class="color" style="background-color: green;"></div>
+        <div class="color" style="background-color: black;" onclick="setColorSelected('black')"></div>
+        <div class="color" style="background-color: yellow;" onclick="setColorSelected('yellow')"></div>
+        <div class="color" style="background-color: red" onclick="setColorSelected('red')"></div>
+        <div class="color" style="background-color: green;" onclick="setColorSelected('green')"></div>
     </div>
     <div id="pixel-board">
         <div class="line">
-            <div class="pixel"></div>
-            <div class="pixel"></div>
-            <div class="pixel"></div>
-            <div class="pixel"></div>
-            <div class="pixel"></div>
+            <div class="pixel" onclick="setPixelColour(this)"></div>
+            <div class="pixel" onclick="setPixelColour(this)"></div>
+            <div class="pixel" onclick="setPixelColour(this)"></div>
+            <div class="pixel" onclick="setPixelColour(this)"></div>
+            <div class="pixel" onclick="setPixelColour(this)"></div>
         </div>
         <div class="line">
-            <div class="pixel"></div>
-            <div class="pixel"></div>
-            <div class="pixel"></div>
-            <div class="pixel"></div>
-            <div class="pixel"></div>
+            <div class="pixel" onclick="setPixelColour(this)"></div>
+            <div class="pixel" onclick="setPixelColour(this)"></div>
+            <div class="pixel" onclick="setPixelColour(this)"></div>
+            <div class="pixel" onclick="setPixelColour(this)"></div>
+            <div class="pixel" onclick="setPixelColour(this)"></div>
         </div>
         <div class="line">
-            <div class="pixel"></div>
-            <div class="pixel"></div>
-            <div class="pixel"></div>
-            <div class="pixel"></div>
-            <div class="pixel"></div>
+            <div class="pixel" onclick="setPixelColour(this)"></div>
+            <div class="pixel" onclick="setPixelColour(this)"></div>
+            <div class="pixel" onclick="setPixelColour(this)"></div>
+            <div class="pixel" onclick="setPixelColour(this)"></div>
+            <div class="pixel" onclick="setPixelColour(this)"></div>
         </div>
         <div class="line">
-            <div class="pixel"></div>
-            <div class="pixel"></div>
-            <div class="pixel"></div>
-            <div class="pixel"></div>
-            <div class="pixel"></div>
+            <div class="pixel" onclick="setPixelColour(this)"></div>
+            <div class="pixel" onclick="setPixelColour(this)"></div>
+            <div class="pixel" onclick="setPixelColour(this)"></div>
+            <div class="pixel" onclick="setPixelColour(this)"></div>
+            <div class="pixel" onclick="setPixelColour(this)"></div>
         </div>
         <div class="line">
-            <div class="pixel"></div>
-            <div class="pixel"></div>
-            <div class="pixel"></div>
-            <div class="pixel"></div>
-            <div class="pixel"></div>
+            <div class="pixel" onclick="setPixelColour(this)"></div>
+            <div class="pixel" onclick="setPixelColour(this)"></div>
+            <div class="pixel" onclick="setPixelColour(this)"></div>
+            <div class="pixel" onclick="setPixelColour(this)"></div>
+            <div class="pixel" onclick="setPixelColour(this)"></div>
         </div>
         
     </div>
