--- a/index.html
+++ b/index.html
@@ -4,61 +4,71 @@
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Acme&display=swap"
+      rel="stylesheet"
+    />
     <link rel="stylesheet" href="style.css" />
     <script src="script.js"></script>
-    <title>Paleta de Cores</title>
+    <title>Projeto Pixels Art</title>
   </head>
   <body>
-    <h1 id="title">Paleta de Cores</h1>
+    <main>
+      <img src="/pngwing.com.png" alt="bob ross pixel art" class="centered" />
+      <h1 id="title" class="centered">Paleta de Cores</h1>
 
-    <div id="color-palette">
-      <div class="color selected"></div>
-      <div class="color"></div>
-      <div class="color"></div>
-      <div class="color"></div>
-    </div>
+      <div id="color-palette" class="centered">
+        <div class="color selected"></div>
+        <div class="color"></div>
+        <div class="color"></div>
+        <div class="color"></div>
+      </div>
 
-    <button id="clear-board">Limpar</button>
-
-    <input type="number" min="1" id="board-size">
-    <button id="generate-board">VQV</button>
-
-    <div id="pixel-board">
-      <div class="board-line">
-        <div class="pixel"></div>
-        <div class="pixel"></div>
-        <div class="pixel"></div>
-        <div class="pixel"></div>
-        <div class="pixel"></div>
+      <div id="menu" class="centered">
+        <button id="clear-board">Limpar</button>
+        <label for="board-size">Tamanho do tabuleiro:</label>
+        <input type="number" min="1" id="board-size" />
+        <button id="generate-board">VQV</button>
       </div>
-      <div class="board-line">
-        <div class="pixel"></div>
-        <div class="pixel"></div>
-        <div class="pixel"></div>
-        <div class="pixel"></div>
-        <div class="pixel"></div>
+      <div id="pixel-board" class="centered">
+        <div class="board-line">
+          <div class="pixel"></div>
+          <div class="pixel"></div>
+          <div class="pixel"></div>
+          <div class="pixel"></div>
+          <div class="pixel"></div>
+        </div>
+        <div class="board-line">
+          <div class="pixel"></div>
+          <div class="pixel"></div>
+          <div class="pixel"></div>
+          <div class="pixel"></div>
+          <div class="pixel"></div>
+        </div>
+        <div class="board-line">
+          <div class="pixel"></div>
+          <div class="pixel"></div>
+          <div class="pixel"></div>
+          <div class="pixel"></div>
+          <div class="pixel"></div>
+        </div>
+        <div class="board-line">
+          <div class="pixel"></div>
+          <div class="pixel"></div>
+          <div class="pixel"></div>
+          <div class="pixel"></div>
+          <div class="pixel"></div>
+        </div>
+        <div class="board-line">
+          <div class="pixel"></div>
+          <div class="pixel"></div>
+          <div class="pixel"></div>
+          <div class="pixel"></div>
+          <div class="pixel"></div>
+        </div>
       </div>
-      <div class="board-line">
-        <div class="pixel"></div>
-        <div class="pixel"></div>
-        <div class="pixel"></div>
-        <div class="pixel"></div>
-        <div class="pixel"></div>
-      </div>
-      <div class="board-line">
-        <div class="pixel"></div>
-        <div class="pixel"></div>
-        <div class="pixel"></div>
-        <div class="pixel"></div>
-        <div class="pixel"></div>
-      </div>
-      <div class="board-line">
-        <div class="pixel"></div>
-        <div class="pixel"></div>
-        <div class="pixel"></div>
-        <div class="pixel"></div>
-        <div class="pixel"></div>
-      </div>
-    </div>
+    </main>
   </body>
 </html>
