--- a/index.html
+++ b/index.html
@@ -15,6 +15,7 @@
         <div class="color" style="background-color: red" onclick="setColorSelected('red')"></div>
         <div class="color" style="background-color: green;" onclick="setColorSelected('green')"></div>
     </div>
+    <button id="clear-board" onclick="clearPixels()">Limpar</button>
     <div id="pixel-board">
         <div class="line">
             <div class="pixel" onclick="setPixelColour(this)"></div>
