--- a/index.html
+++ b/index.html
@@ -5,20 +5,21 @@
 	<meta http-equiv="X-UA-Compatible" content="IE=edge">
 	<meta name="viewport" content="width=device-width, initial-scale=1.0">
 	<link rel="stylesheet" href="style.css">
+	<link rel="shortcut icon" href="https://img-premium.flaticon.com/png/512/2661/premium/2661024.png?token=exp=1631483955~hmac=233937d139ce56a8b6dcdf25a094a208" type="image/x-icon">
 	<title>Pixels Art</title>
 </head>
 <body>
 	<h1 id="title">Paleta de Cores</h1>
 	<section id="color-palette">
-		<div class="black color selected"></div>
-		<div class="color red"></div>
-		<div class="blue color"></div>
-		<div class="orange color"></div>
+		<div class="color black selected"></div>
+		<div class="color color2"></div>
+		<div class="color color3"></div>
+		<div class="color color4"></div>
 	</section>
 	<div id="interact">
-		<button id="clear-board">Limpar</button>
+		<button id="clear-board" class="btn">Limpar</button>
 		<input type="number" id="board-size" min="1">
-		<button id="generate-board">VQV</button>
+		<button id="generate-board" class="btn">VQV</button>
 	</div>
 	<section id="pixel-board">
 		
