Adicionado background / Ajustados requisitos

--- a/index.html
+++ b/index.html
@@ -10,20 +10,18 @@
     <h1 id=title > Paleta de Cores</h1>
 
     <div id=color-palette class=palette> 
-      <div class="color black "></div>
-      <div class="color red"></div>
-      <div class="color orange"></div>
-      <div class="color blue"></div>
+      <div class="color black"></div>
     </div>
 
     <button id='clear-board'> Limpar</button>
-    <button id='generate-board'>VQV</button>
     <input id="board-size" type="number"  min="1" max="50"> 
+    <button id='generate-board'>VQV</button>
+
 
     <div id=pixel-board></div>  
 
   
-
+    <p id='src-background'>Background image by <a href="http://www.freepik.com">Freepik</a>. Designed by Lucas Moura.</p>
   </body>
   <script src="script.js"></script>
   </html>
