--- a/index.html
+++ b/index.html
@@ -10,20 +10,21 @@
 <body>
   <main>
     <header>
-      <h1 id="title">Paleta de Cores</h1>
+      <div class="title-container">
+        <h1 id="title">Paleta de Cores</h1>
+      </div>
     </header>
     <section id="color-palette">
       <div class="color selected" id="first">
-
       </div>
-      <div class="color" id="second">
 
+      <div class="color">
       </div>
-      <div class="color" id="third">
 
+      <div class="color">
       </div>
-      <div class="color" id="fourth">
 
+      <div class="color">
       </div>
     </section>
 
@@ -31,6 +32,7 @@
       <button id="clear-board">Limpar</button>
       <input type="number" id="board-size" min="1" max="50">
       <button id="generate-board">VQV</button>
+      <button id="randomizeColor">Trocar Cores</button>
     </section>
 
     <section id="pixel-board">
