--- a/index.html
+++ b/index.html
@@ -39,6 +39,9 @@
 
     </section>
   </main>
+  <footer>
+    <p>Created by : Jeff Thierch</p>
+  </footer>
   <script src="./script.js"></script>
 </body>
 </html>
