--- a/index.html
+++ b/index.html
@@ -15,8 +15,12 @@
     <div class="color green"></div>
   </section>
 
-  <main class="main-content"></main>  
-    
+  <main class="main-content">
+
+    <section class="main-section"></section>
+
+  </main>
+
   <script src="script.js"></script>
 </body>
 </html>
