Ajuste requisito 4 e ajustes css

--- a/index.html
+++ b/index.html
@@ -20,9 +20,14 @@
     </div>
   </div>
 
-  <button id="clear-board">Limpar</button>
+  <input id = "board-size" type="number" min = "5" placeholder="Tamanho do board"> 
+    <button id = "generate-board" class = "button">VQV</button>
 
-  <div id="pixel-board"></div>
+    <div>
+        <button id = "clear-board" class = "button" type="button" autofocus>Limpar</button>
+    </div>
+
+  <div id="pixel-board" class = " container " ></div>
     <div class="line">
       <div class="pixel"></div>
       <div class="pixel"></div>
