--- a/index.html
+++ b/index.html
@@ -17,11 +17,11 @@
         <h1 id='title'>Paleta de Cores</h1>
     </header>
     <main>
-        <div id='color-palette'>
-            <div class='color' id='c1'></div>
-            <div class='color' id='c2'></div>
-            <div class='color' id='c3'></div>
-            <div class='color' id='c4'></div>
+           <div id='color-palette'>
+            <div style='background-color: black;' class='color' ></div>
+            <div style='background-color: rgb(222, 109, 32);' class='color' ></div>
+            <div style='background-color: rgb(255, 212, 177);' class='color' ></div>
+            <div style='background-color: rgb(208, 202, 176);' class='color' ></div>
             </div>
         <div id='pixel-board' >
             <div class='pixel'></div>
