--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="pt-br">
 
 <head>
-  <link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" type="text/css" href="style.css">
   <meta charset="UTF-8">
   <meta http-equiv="X-UA-Compatible" content="IE=edge">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -14,15 +14,20 @@
 
   </header>
   <main>
-    <section id='selectColor'>
+    <nav id='selectColor'>
       <ul id='color-palette'>
         <li id='black' class='color selected'></li>
-        <li id='red' class='color'></li>
-        <li id='pink' class='color'></li>
-        <li id='green' class='color'></li>
+        <li id='color2' class='color'></li>
+        <li id='color3' class='color'></li>
+        <li id='color4' class='color'></li>
       </ul>
+    </nav>
+    <section>
+      <button id='clear-board'>Limpar</button>
+      <label for="nome">Tamanho:</label>
+      <input type="number" min='1' id="board-size" />
+      <button id='generate-board'>VQV</button>
     </section>
-    <button id='clear-board'>Limpar</button>
     <div id='pixel-board'>
 
     </div>
