--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 
       <div>
         <button id="clear-board">Limpar</button>
-        <input type="number" min="1" max="50" value="insira o numero de colunas">
+        <input id="board-size" type="number" min="1" max="50">
         <button id="generate-board">VQV</button>
       </div>
 
