--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
     <section>
       <div id="color-palette"></div>
     </section>
-    <section class="btn-clear">
-      <button id="clear-board">Limpar</button>
+    <section id="section-tools">
     </section>
     <section>
       <div id="pixel-board"></div>
