todos os requisitos obrigatorios

--- a/index.html
+++ b/index.html
@@ -9,13 +9,15 @@
 </head>
 <body>
     <h1 id= "title">Paleta de Cores</h1>
- 
     <section id ="color-palette">
         <div class = "color" id = "black-palette"></div>
         <div class = "color" id = "blue-palette"></div>
         <div class = "color" id = "green-palette"></div>
         <div class = "color" id = "pink-palette"></div>
     </section> 
+    <button id = clear-board>Limpar</button>
+    <input type="number" name ="pixel-board-size" id="board-size" max = "50" min ="1">
+    <button id = "generate-board">VQV</button>
     <section id="pixel-board">
 
     </section>
