--- a/index.html
+++ b/index.html
@@ -6,21 +6,23 @@
   <link rel="stylesheet" href="style.css">
 </head>
 <body>
-  <h1 id="title">Paleta de Cores</h1>
-
-  <section id="color-palette">
-    <div class="color black selected"></div>
-    <div class="color red"></div>
-    <div class="color blue"></div>
-    <div class="color green"></div>
-  </section>
+  <h1 id="title">Paleta de Cores</h1>  
 
   <main class="main-content">
+    <section id="color-palette">
+      <div class="color color1 selected"></div>
+      <div class="color color2"></div>
+      <div class="color color3"></div>
+      <div class="color color4"></div>
+    </section>
+    <section class="btnAndInput">
 
-    <section class="main-section"></section>
+    </section>
+    <section id='pixel-board'>
 
-  </main>
-
+    </section>
+  </main>  
+  
   <script src="script.js"></script>
 </body>
 </html>
