adicionadno requisitos finais

--- a/index.html
+++ b/index.html
@@ -10,7 +10,7 @@
 <body>
 <h1 id="title">"Paleta de Cores".</h1>
   <div id="color-palette">
-    <div class="color" id="square1"></div>
+    <div class="color selected" id="square1"></div>
     <div class="color" id="square2"></div>
     <div class="color" id="square3"></div>
     <div class="color" id="square4"></div>
