--- a/index.html
+++ b/index.html
@@ -19,6 +19,10 @@
   </section>
 
   <section>
+    <button id="clear-board">Limpar</button>
+  </section>
+
+  <section>
     <div id="pixel-board">
     </div>
   </section>
