--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     </header>
     <div id="container">
         <ul id="color-palette">
-            <li class="color red"></li>
-            <li class="color blue"></li>
-            <li class="color green"></li>
-            <li class="color black"></li>
+            <div class="color black"></div>
+            <div class="color blue"></div>
+            <div class="color green"></div>
+            <div class="color red"></div>
         </ul>
     </div>
     <script src="script.js"></script>
