--- a/index.html
+++ b/index.html
@@ -8,13 +8,19 @@
 
   <link rel="stylesheet" href="style.css">
 </head>
-<body id="body">
-  <h1 id="title">Paleta de Cores</h1>
+<body>
+  <header>
+    <h1 id="title">Paleta de Cores</h1>
+  </header>
   <section id="color-palette">
     <div class="color black"></div>
     <div class="color red"></div>
     <div class="color blue"></div>
     <div class="color green"></div>
+  </section>
+  <section id="buttons">
+    <input type="number" min="1" id="board-size">
+    <button id="generate-board">VQV</button>
   </section>
   <script src="script.js"></script>
 </body>
