--- a/index.html
+++ b/index.html
@@ -12,13 +12,15 @@
     <h1 id="title">Paleta de Cores</h1>
     </header>
     <div id="container">
-        <ul id="color-palette">
+        <div id="color-palette">
             <div class="color black"></div>
             <div class="color blue"></div>
             <div class="color green"></div>
             <div class="color red"></div>
-        </ul>
+        </div>
+        <div id="pixel-board"></div>
     </div>
+    
     <script src="script.js"></script>
 </body>
 </html>
