--- a/index.html
+++ b/index.html
@@ -14,9 +14,9 @@
   </header>
   <section id="color-palette">
     <div class="color black"></div>
-    <div class="color red"></div>
-    <div class="color blue"></div>
-    <div class="color green"></div>
+    <div class="color"></div>
+    <div class="color"></div>
+    <div class="color"></div>
   </section>
   <section id="buttons">
     <input type="number" min="1" id="board-size">
