Todos os requisitos obrigatórios completos

--- a/index.html
+++ b/index.html
@@ -55,5 +55,6 @@
     </div>
   </section>
   <script src="script.js"></script>
+  <!-- <script src="testek,vorfpoçvfvoçasdfreww.js"></script> -->
 </body>
 </html>
