Adequa página conforme requisitos. Adiciona botão 'Limpar'.

--- a/index.html
+++ b/index.html
@@ -11,15 +11,14 @@
 
     <h1 id="title">Paleta de Cores</h1>
     <div id="color-palette">
-        <div class="color" id="pink"></div>
+        <div class="color" id="black"></div>
         <div class="color" id="red"></div>
         <div class="color" id="orange"></div>
         <div class="color" id="yellow"></div>
     </div>
 
     <div id="button-container">
-        <button id="clear-board">Clear Board</button>
-        <button id="vqv">VQV</button>
+        <button id="clear-board">Limpar</button>
     </div>
 
     <div class="center-board">
@@ -49,18 +48,7 @@
         <div class="pixel"></div>
         <div class="pixel"></div>
         <div class="pixel"></div>
-    </div>
-        <div class="color" id="black"></div>
-        <div class="color" id="white"></div>
-    </div>
 
-
- 
-
-    <footer>
-            <p>© marllon | 2021</p>
-    </footer>
-    
     <script src="script.js"></script>
 </body>
 </html>
