refatora codigos e resolve até o ex 6

--- a/index.html
+++ b/index.html
@@ -8,48 +8,8 @@
   </head>
   <body>
     <h1 id="title">"Paleta de Cores"</h1>
-    <div id="color-palette">
-      <div id='1' class="color black"></div>
-      <div id='2' class="color red"></div>
-      <div id='3' class="color blue"></div>
-      <div id='4' class="color green"></div>
-    </div>
-    <div id="pixel-board">
-      <div class="pixels-line">
-        <div class="pixel"></div>
-        <div class="pixel"></div>
-        <div class="pixel"></div>
-        <div class="pixel"></div>
-        <div class="pixel"></div>
-      </div>
-      <div class="pixels-line">
-        <div class="pixel"></div>
-        <div class="pixel"></div>
-        <div class="pixel"></div>
-        <div class="pixel"></div>
-        <div class="pixel"></div>
-      </div>
-      <div class="pixels-line">
-        <div class="pixel"></div>
-        <div class="pixel"></div>
-        <div class="pixel"></div>
-        <div class="pixel"></div>
-        <div class="pixel"></div>
-      </div>
-      <div class="pixels-line">
-        <div class="pixel"></div>
-        <div class="pixel"></div>
-        <div class="pixel"></div>
-        <div class="pixel"></div>
-        <div class="pixel"></div>
-      </div>
-      <div class="pixels-line">
-        <div class="pixel"></div>
-        <div class="pixel"></div>
-        <div class="pixel"></div>
-        <div class="pixel"></div>
-        <div class="pixel"></div>
-      </div>      
+    <div id="color-palette"></div>
+    <div id="pixel-board">            
     </div>  
     <script type="text/javascript" src="script.js"></script>  
   </body>
