--- a/index.html
+++ b/index.html
@@ -10,13 +10,14 @@
     <header>
         <h1 id="title">Paleta de Cores</h1>
     </header>
-    <div id="color-palette">
+    <section id="color-palette">
             <div class="color color1 selected"></div>
             <div class="color color2"></div>
             <div class="color color3"></div>
             <div class="color color4"></div>
-    </div><br>
-    <div id="pixel-board">
+    </section><br>
+    <button id="clear-board">Limpar</button>
+    <section id="pixel-board"><br>
         <div class="pixel"></div>
         <div class="pixel"></div>
         <div class="pixel"></div>
@@ -42,7 +43,7 @@
         <div class="pixel"></div>
         <div class="pixel"></div>
         <div class="pixel"></div>
-    </div>
+    </section>
 
 </body>
 <script src="script.js"></script>
