--- a/index.html
+++ b/index.html
@@ -20,6 +20,14 @@
             <div class="color blue"></div>
             <div class="color green"></div>
         </section>
+
+        <section id="pixel-board">
+            <div id="first-line"></div>
+            <div id="second-line"></div>
+            <div id="third-line"></div>
+            <div id="fourth-line"></div>
+            <div id="fifth-line"></div>
+        </section>
     </main>
     <script src="script.js"></script>
 </body>
