--- a/index.html
+++ b/index.html
@@ -9,9 +9,9 @@
 </head>
 <body>
 
-    <head>
+    <header>
         <h1 id="title">Paleta de Cores</h1>
-    </head>
+    </header>
 
     <main>
         <section id="color-palette">
