--- a/index.html
+++ b/index.html
@@ -11,44 +11,48 @@
 
 <body>
     <header>
-        <h1 id="project_Title">Pixels Art</h1>
+        <h1 id="project-title">Pixels Art</h1>
     </header>
-    <figcaption>
-        <img id="" src="" alt="">
-    </figcaption>
+    <figure id="logo">
+        <img id="logo-tybe" src="" alt="">
+        <figcaption id="logo-text">@Trybe</figcaption>
+    </figure>
     <main>
-        <section>
-            <h1 id="tools_Titlle">Ferramentas de Desenho</h1>
-            <div id="tool_Bar">
-                <button>Reset</button>
-                <button>Pen</button>
-                <button>raser</button>
+        <section id="tools">
+            <h1 id="tools-titlle">Ferramentas de Desenho</h1>
+            <div id="tools-bar">
+                <button class="tool-botton">Reset</button>
+                <button class="tool-botton">Eraser</button>
             </div>
         </section>
-        <section>
+        <section id="palette">
             <h1 id="title">Paleta de Cores</h1>
             <div id="color-palette">
             </div>
         </section>
-        <section>
-            <div id="grid_Drawing">
+        <section id="pixel-grid">
+            <div id="grid-drawing">
             </div>
         </section>
     </main>
     <footer>
-        <section>
-            <nav>
-                <ul>
-                    <li><a href="https://www.instagram.com/dev.codding/">Instagram</a></li>
-                    <li><a href="https://www.linkedin.com/in/lucas-camargo-80a015190/">Linkedin</a></li>
-                    <li><a href="https://github.com/lbcamargo94">Github</a></li>
+        <section id="credits">
+            <nav id="credits-links">
+                <ul id="links-list">
+                    <li class="list-item"><a class="list-item-link" href="https://www.instagram.com/dev.codding/">Instagram</a></li>
+                    <li class="list-item"><a class="list-item-link" href="https://www.linkedin.com/in/lucas-camargo-80a015190/">Linkedin</a>
+                    </li>
+                    <li class="list-item"><a class="list-item-link" href="https://github.com/lbcamargo94">Github</a></li>
                 </ul>
             </nav>
         </section>
-        <section>
-            <div class="content">© 2021, Trybe, Inc. All Rights Reserved.</div>
+        <section id="copyright">
+            <div class="content">
+                <p id="text-copyright">© 2021, Trybe, Inc. All Rights Reserved.</p>
+            </div>
         </section>
     </footer>
+    <script src="script.js"></script>
 </body>
-<script src="script.js" ></script>
+
 </html>
