refazendo todo codigo, estava fazndo pelo HTML, mas notei que teria que fazer pelo JS

--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -8,68 +8,6 @@
     <title>lucas-seixas-project-pixels-art</title>
 </head>
 <body>
-    <header>
-        <h1 id="title">
-            Paleta de Cores
-        </h1>
-    </header>
-    <nav>
-        <div id="color-palette">
-            <div class="color box-black"></div>
-            <div class="color box-green"></div>
-            <div class="color box-yellow"></div>
-            <div class="color box-red"></div>
-        </div>
-    </nav>
-    <main>
-        <div id="conteiner">
-            <div>
-                <div id="pixel-board">
-                    <div class="pixel"></div>
-                    <div class="pixel"></div>
-                    <div class="pixel"></div>
-                    <div class="pixel"></div>
-                    <div class="pixel"></div>
-                </div>
-            </div>
-            <div>
-                <div id="pixel-board">
-                    <div class="pixel"></div>
-                    <div class="pixel"></div>
-                    <div class="pixel"></div>
-                    <div class="pixel"></div>
-                    <div class="pixel"></div>
-                </div>
-            </div>
-            <div>
-                <div id="pixel-board">
-                    <div class="pixel"></div>
-                    <div class="pixel"></div>
-                    <div class="pixel"></div>
-                    <div class="pixel"></div>
-                    <div class="pixel"></div>
-                </div>
-            </div>
-            <div>
-                <div id="pixel-board">
-                    <div class="pixel"></div>
-                    <div class="pixel"></div>
-                    <div class="pixel"></div>
-                    <div class="pixel"></div>
-                    <div class="pixel"></div>
-                </div>
-            </div>
-            <div>
-                <div id="pixel-board">
-                    <div class="pixel"></div>
-                    <div class="pixel"></div>
-                    <div class="pixel"></div>
-                    <div class="pixel"></div>
-                    <div class="pixel"></div>
-                </div>
-            </div>
-        </div>
-    </main>
     
 </body>
 </html>
