--- a/index.html
+++ b/index.html
@@ -18,7 +18,11 @@
     </div>
   </section>
 
-  <section>
+  <section class="buttons">
+    <div>
+      <input type="number" id="board-size" min="1">
+      <button type="submit" id="generate-board">VQV</button>
+    </div>
     <button id="clear-board">Limpar</button>
   </section>
 
