--- a/index.html
+++ b/index.html
@@ -19,8 +19,14 @@
     </section>
 
     <section>
+        <button id="clear-board">Limpar</button>
+    </section>
+    
+    <section>
         <div id="pixel-board"></div>
     </section>
+
+    
 </main>
 
 <script src="script.js"></script>
