Adiciona função de cores aleatórias.

--- a/index.html
+++ b/index.html
@@ -11,10 +11,10 @@
 
     <h1 id="title">Paleta de Cores</h1>
     <div id="color-palette">
-        <div class="color" id="black"></div>
-        <div class="color" id="red"></div>
-        <div class="color" id="orange"></div>
-        <div class="color" id="yellow"></div>
+        <div class="color" id="color1"></div>
+        <div class="color" id="color2"></div>
+        <div class="color" id="color3"></div>
+        <div class="color" id="color4"></div>
     </div>
 
     <div id="button-container">
