--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
         <h1 id="title">Paleta de Cores</h1>
     </header>
     <section id="color-palette">
-        <div class="color selected" id="color1"></div>
-        <div class="color" id="color2"></div>
-        <div class="color" id="color3"></div>
-        <div class="color" id="color4"></div>
+        <div class="color selected" id="black"></div>
+        <div class="color" id="red"></div>
+        <div class="color" id="yellow"></div>
+        <div class="color" id="blue"></div>
     </section>
     <main>
         <div id="pixel-board">
@@ -47,6 +47,7 @@
             <div class="pixel"></div>
         </div>
     </main>
-    <script src="/script.js"></script>
+    <script src="script.js" type="text/javascript">
+    </script>
 </body>
 </html>
