--- a/index.html
+++ b/index.html
@@ -1,16 +1,18 @@
 <html lang="ptbr">
     <head>
-        <meta charshet="utf-8">
+        <meta charshet="UTF-8">
         <title>Pixel art project</title>
-        <link href="style.css"> 
+        <link rel="stylesheet" href="style.css"> 
     </head>
     <body>
-        <h1 id="title">Paleta de Cores</h1>
+        <header>
+            <h1 id="title">Paleta de Cores</h1>
+        </header>
         <div id="color-palette">
-            <div class="color"></div>
-            <div class="color"></div>
-            <div class="color"></div>
-            <div class="color"></div>
+            <div class="color" id="black" ></div>
+            <div class="color" id="red" ></div>
+            <div class="color" id="blue"></div>
+            <div class="color" id="purple"></div>
         </div>
         
         
