--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
     </header>
     <div id="container">
         <div id="color-palette">
-            <div class="color black"></div>
-            <div class="color blue"></div>
-            <div class="color green"></div>
-            <div class="color red"></div>
+            <div class="color" id="black"></div>
+            <div class="color" id="blue"></div>
+            <div class="color" id="green"></div>
+            <div class="color" id="red"></div>
         </div>
         <div id="pixel-board"></div>
     </div>
