--- a/index.html
+++ b/index.html
@@ -18,6 +18,7 @@
             <div class="color" id="green"></div>
             <div class="color" id="red"></div>
         </div>
+        <button id="clear-board">Limpar</button>
         <div id="pixel-board"></div>
     </div>
     
