--- a/index.html
+++ b/index.html
@@ -8,6 +8,12 @@
     <title>lucas-seixas-project-pixels-art</title>
 </head>
 <body>
-    
+    <h1 id="title"></h1>
+    <section>
+
+        
+    </section>
+
+    <script src="script.js"></script>
 </body>
 </html>
