--- a/index.html
+++ b/index.html
@@ -7,8 +7,9 @@
     <title></title>
   </head>
   <body>
-    <h1 id="title">"Paleta de Cores"</h1>
+    <h1 id="title">"Paleta de Cores"</h1>    
     <div id="color-palette"></div>
+    <button id="clear-board">Limpar</button>
     <div id="pixel-board">            
     </div>  
     <script type="text/javascript" src="script.js"></script>  
