Added buttun clear-board

--- a/index.html
+++ b/index.html
@@ -27,6 +27,9 @@
                 <span class="pop-color-grade"></span>
             </div>
         </section>
+        <section id="buttons">
+            <button id="clear-board" style="margin: 10px auto; display: block; padding: 10px;">Limpar</button>
+        </section>
         <section id="board">
             <div id="pixel-board" class="pixel-board"></div>
         </section>
