concluido criar tabela

--- a/index.html
+++ b/index.html
@@ -24,23 +24,25 @@
                 <h1 id="tools-titlle">Ferramentas de Desenho</h1>
                 <div id="tools-bar">
                     <label for="">Limpar Dezenho</label>
-                    <button class="tool-botton">Limpar</button>
+                    <button id="clear" class="tool-botton">Limpar</button>
                     <label for="">Tabela</label>
-                    <input id="size-line" class="grid-size" type="number" min="1" max="10" placeholder="Linhas">
-                    <input id="size-colum" class="grid-size" type="number" min="1" max="10" placeholder="Colunas">
-                    <button class="tool-botton">Criar</button>
+                    <input id="size-line" class="grid-size" type="number" min="1" max="5" placeholder="Linhas">
+                    <input id="size-colum" class="grid-size" type="number" min="1" max="5" placeholder="Colunas">
+                    <button id="create" class="tool-botton">Criar</button>
                 </div>
             </section>
-            <!-- Tabela de Pixel -->
-            <section id="pixel-grid">
-            </section>
+        </aside>
+        <section id="pixel-grid">
             <!-- Paleta de Cores -->
             <section id="palette">
                 <h1 id="title">Paleta de Cores</h1>
                 <div id="color-palette">
                 </div>
             </section>
-        </aside>
+            <!-- Tabela de Pixel -->
+            <section id="pixel-board">
+            </section>
+        </section>
     </main>
     <footer>
         <section id="credits">
