Algumas alteracoes no style e requisitos 10 e 12

--- a/index.html
+++ b/index.html
@@ -17,12 +17,14 @@
     </div>
     <!-- Encontreia  utilização do form no link seguinte do W3schools -->
     <!-- link: https://www.w3schools.com/html/html_forms.asp -->
-    <form>
-        <label for="board-size">Tamanho do Quadro:</label>
-        <input type="number" id="board-size" max="50" min="1">
-    </form>
-    <button id="generate-board">VQV</button>
-    <button id="clear-board">Limpar</button>
+    <div id="controlador">
+        <form class="side-a-side">
+            <label for="board-size">Tamanho do Quadro:</label>
+            <input type="number" id="board-size" max="50" min="1">
+        </form>
+        <button id="generate-board" class="side-a-side">VQV</button>
+        <button id="clear-board">Limpar</button>
+    </div>
     <div id="pixel-board">
         <div class="pixel"></div>
         <div class="pixel"></div>
