--- a/index.html
+++ b/index.html
@@ -4,10 +4,19 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>Project Pixels Art</title>
 </head>
 <body>
-    <h1 id= "title">Paleta de Cores</h1>
+    <h1 id="title">Paleta de Cores</h1>
     
+    <div id="color-palette">
+    </div>
+
+    <div id="pixel-board">
+    </div>
+    
+    <script src="script.js"></script>
+
 </body>
 </html>
