refatorando, lint e lint:stryle e requesitos

--- a/index.html
+++ b/index.html
@@ -16,15 +16,17 @@
             <div class="color"></div>
             <div class="color"></div>
         </section>
-        <input type="button" value="Limpar" id="clear-board">
-        </header>
+        <button type="button" id="clear-board">Limpar</button>
+    </header>
+    <main>
         <section id="pixel-board">
-        <div class="line-pixel"></div>
-        <div class="line-pixel"></div>
-        <div class="line-pixel"></div>
-        <div class="line-pixel"></div>
-        <div class="line-pixel"></div>
-    </section>
+            <div class="line-pixel"></div>
+            <div class="line-pixel"></div>
+            <div class="line-pixel"></div>
+            <div class="line-pixel"></div>
+            <div class="line-pixel"></div>
+        </section>
+    </main>
 
     <script src="script.js"></script>
 </body>
