--- a/index.html
+++ b/index.html
@@ -47,5 +47,6 @@
       <div class="pixel" id="e4"></div>
       <div class="pixel" id="e5"></div>
     </section>
+    <script type="text/javascript" src="/script.js"></script>
 </body>
 </html>
