--- a/index.html
+++ b/index.html
@@ -26,8 +26,10 @@
                     <label for="">Limpar Dezenho</label>
                     <button id="clear" class="tool-botton">Limpar</button>
                     <label for="">Tabela</label>
-                    <input id="size-line" class="grid-size" type="number" min="1" max="5" placeholder="Linhas">
-                    <input id="size-colum" class="grid-size" type="number" min="1" max="5" placeholder="Colunas">
+                    <input id="size-line" class="grid-size" type="number"
+                    placeholder="Linhas">
+                    <input id="size-colum" class="grid-size" type="number"
+                    placeholder="Colunas">
                     <button id="create" class="tool-botton">Criar</button>
                 </div>
             </section>
