--- a/index.html
+++ b/index.html
@@ -13,10 +13,10 @@
         <h1 id="title">Paleta de Cores</h1>
     </header>
     <section id="color-palette">
-        <div class="color selected" id="black"></div>
-        <div class="color" id="red"></div>
-        <div class="color" id="yellow"></div>
-        <div class="color" id="blue"></div>
+        <div class="color" id="black">black</div>
+        <div class="color" id="red">red</div>
+        <div class="color" id="yellow">yellow</div>
+        <div class="color" id="blue">blue</div>
     </section>
     <main>
         <div id="pixel-board">
