ajustes de estilo

--- a/index.html
+++ b/index.html
@@ -8,7 +8,9 @@
   <title>Projeto Pixels Art</title>
 </head>
 <body>
-  <h1 id="title">Paleta de Cores</h1>
+  <header>
+    <h1 id="title">Paleta de Cores</h1>
+  </header>
   
   <main id="conteudoPrincipal">
     <section>
